data/derived/sp14/progs/unify/prog2492.ml.out
Characters 47-60:
  else digitsOfInt n;;
       ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
